--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -26,3 +26,9 @@ jobs:
     - run: ./vendor/bin/phpcs -v
     - run: ./vendor/bin/psalm
     - run: XDEBUG_MODE=coverage ./vendor/bin/phpunit
+    - name: Upload coverage results to Coveralls
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        composer global require php-coveralls/php-coveralls
+        php-coveralls --coverage_clover=.phpunit.cache/clover.xml -v
