--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,5 +30,5 @@ jobs:
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        composer global require php-coveralls/php-coveralls
-        php-coveralls --coverage_clover=.phpunit.cache/clover.xml -v
+        composer require php-coveralls/php-coveralls
+        ./vendor/bin/php-coveralls --coverage_clover=.phpunit.cache/clover.xml -v
