--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "phpunit/phpunit": "^9",
     "squizlabs/php_codesniffer": "^3",
     "vimeo/psalm": "^4",
-    "wp-coding-standards/wpcs": "^2"
+    "wp-coding-standards/wpcs": "^2",
+    "php-coveralls/php-coveralls": "^2"
   }
 }
